ajuste de logica de escaneo de wifi, aplicando mejor manejo de escaneo segun documentacion de apis