@@ -13,6 +13,7 @@ import android.os.Build;
 import android.os.Bundle;
 import android.os.Handler;
 import android.os.Looper;
+import android.os.SystemClock;
 import android.provider.Settings;
 import android.view.LayoutInflater;
 import android.view.View;
@@ -41,22 +42,43 @@ import java.util.Set;
 
 public class MainActivity extends AppCompatActivity {
 
+    private static final long SCAN_COOLDOWN_MS = 30_000L;
+    private static final long SCAN_TIMEOUT_MS  = 12_000L;
+
+    // CH1 = 2412 MHz, CH14 = 2484 MHz. +-2 MHz de margen por chipsets fuera de spec
+    private static final int FREQ_MIN = 2410;
+    private static final int FREQ_MAX = 2486;
+
+    private long lastScanStartMs = 0L;
+
     private ActivityMainBinding binding;
     private WifiManager wifiManager;
     private ChannelAdapter channelAdapter;
 
     private final List<WifiChannel> channels = buildAllChannels();
-
     private final Handler scanTimeoutHandler = new Handler(Looper.getMainLooper());
+    private final Handler countdownHandler   = new Handler(Looper.getMainLooper());
     private boolean receiverRegistered = false;
+
+    private final Runnable countdownTick = new Runnable() {
+        @Override
+        public void run() {
+            if (lastScanStartMs == 0L) return;
+            long remaining = (SCAN_COOLDOWN_MS - (SystemClock.elapsedRealtime() - lastScanStartMs)) / 1000;
+            if (remaining > 0) {
+                showStatus("Próximo escaneo en " + remaining + "s");
+                countdownHandler.postDelayed(this, 1_000L);
+            } else {
+                binding.tvScanStatus.setVisibility(View.GONE);
+            }
+        }
+    };
 
     private final BroadcastReceiver scanReceiver = new BroadcastReceiver() {
         @Override
         public void onReceive(Context context, Intent intent) {
             if (WifiManager.SCAN_RESULTS_AVAILABLE_ACTION.equals(intent.getAction())) {
-                boolean fresh = intent.getBooleanExtra(
-                        WifiManager.EXTRA_RESULTS_UPDATED, false
-                );
+                boolean fresh = intent.getBooleanExtra(WifiManager.EXTRA_RESULTS_UPDATED, false);
                 handleScanResults(fresh);
             }
         }
@@ -67,39 +89,31 @@ public class MainActivity extends AppCompatActivity {
                     new ActivityResultContracts.RequestMultiplePermissions(),
                     grants -> {
                         boolean allGranted = true;
-                        for (Boolean granted : grants.values()) {
-                            if (!granted) { allGranted = false; break; }
+                        for (Boolean g : grants.values()) {
+                            if (!g) { allGranted = false; break; }
                         }
-                        if (allGranted) {
-                            startScanFlow();
-                        } else {
-                            showPermissionDeniedDialog();
-                        }
+                        if (allGranted) startScanFlow();
+                        else showPermissionDeniedDialog();
                     }
             );
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
-
         binding = ActivityMainBinding.inflate(getLayoutInflater());
         setContentView(binding.getRoot());
 
         wifiManager = (WifiManager) getApplicationContext().getSystemService(WIFI_SERVICE);
 
-        setupRecyclerView();
+        channelAdapter = new ChannelAdapter(channels);
+        binding.rvChannels.setLayoutManager(new LinearLayoutManager(this));
+        binding.rvChannels.setAdapter(channelAdapter);
+        binding.rvChannels.setHasFixedSize(false);
 
         binding.btnScan.setOnClickListener(v -> requestPermissionsAndScan());
         binding.btnAbout.setOnClickListener(v -> showAboutDialog());
 
         requestPermissionsAndScan();
-    }
-
-    private void setupRecyclerView() {
-        channelAdapter = new ChannelAdapter(channels);
-        binding.rvChannels.setLayoutManager(new LinearLayoutManager(this));
-        binding.rvChannels.setAdapter(channelAdapter);
-        binding.rvChannels.setHasFixedSize(false);
     }
 
     private List<String> requiredPermissions() {
@@ -114,59 +128,42 @@ public class MainActivity extends AppCompatActivity {
 
     private void requestPermissionsAndScan() {
         List<String> missing = new ArrayList<>();
-        for (String perm : requiredPermissions()) {
-            if (ContextCompat.checkSelfPermission(this, perm) != PackageManager.PERMISSION_GRANTED) {
-                missing.add(perm);
-            }
+        for (String p : requiredPermissions()) {
+            if (ContextCompat.checkSelfPermission(this, p) != PackageManager.PERMISSION_GRANTED)
+                missing.add(p);
         }
-        if (missing.isEmpty()) {
-            startScanFlow();
-        } else {
-            permissionLauncher.launch(missing.toArray(new String[0]));
-        }
+        if (missing.isEmpty()) startScanFlow();
+        else permissionLauncher.launch(missing.toArray(new String[0]));
     }
 
     private void startScanFlow() {
         if (isAirplaneModeOn()) {
-            binding.tvScanStatus.setText(
-                    "Modo avión activo — tabla de canales disponible sin escaneo"
-            );
-            binding.tvScanStatus.setVisibility(View.VISIBLE);
+            showStatus("Modo avión activo — no es posible escanear");
             return;
         }
 
-        boolean wifiEncendido = wifiManager.isWifiEnabled();
+        long elapsed = SystemClock.elapsedRealtime() - lastScanStartMs;
+        if (lastScanStartMs > 0 && elapsed < SCAN_COOLDOWN_MS) {
+            countdownHandler.removeCallbacks(countdownTick);
+            countdownHandler.post(countdownTick);
+            loadCachedResults();
+            return;
+        }
 
-        // isScanAlwaysAvailable permite escanear aunque el WiFi esté apagado,
-        // siempre que el usuario tenga activo "Escaneo WiFi" en ajustes de ubicación
-        boolean scanSinWifi = wifiManager.isScanAlwaysAvailable();
-
-        if (wifiEncendido || scanSinWifi) {
+        if (wifiManager.isWifiEnabled() || wifiManager.isScanAlwaysAvailable()) {
             initiateWifiScan();
         } else {
             showEnableWifiDialog();
         }
     }
 
-    /**
-     * Detecta si el modo avión está activo.
-     * En modo avión el radio WiFi se apaga a nivel de hardware y no es posible escanear.
-     */
-    private boolean isAirplaneModeOn() {
-        return Settings.Global.getInt(
-                getContentResolver(),
-                Settings.Global.AIRPLANE_MODE_ON,
-                0
-        ) == 1;
-    }
-
     @SuppressLint("UnspecifiedRegisterReceiverFlag")
     private void initiateWifiScan() {
+        lastScanStartMs = SystemClock.elapsedRealtime();
         setScanningState(true);
         clearScanResults();
 
         IntentFilter filter = new IntentFilter(WifiManager.SCAN_RESULTS_AVAILABLE_ACTION);
-
         if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
             registerReceiver(scanReceiver, filter, RECEIVER_NOT_EXPORTED);
         } else {
@@ -174,18 +171,16 @@ public class MainActivity extends AppCompatActivity {
         }
         receiverRegistered = true;
 
-        boolean scanIniciado = wifiManager.startScan();
-
-        if (!scanIniciado) {
-            // El sistema bloqueó el scan — usamos los resultados cacheados
+        if (!wifiManager.startScan()) {
+            // El sistema bloqueó el scan (throttle o radio ocupado), se usa cache
             handleScanResults(false);
             return;
         }
 
-        // Fallback por si el broadcast no llega
+        // Fallback por si el broadcast nunca llega.
         scanTimeoutHandler.postDelayed(() -> {
             if (receiverRegistered) handleScanResults(false);
-        }, 12_000L);
+        }, SCAN_TIMEOUT_MS);
     }
 
     @SuppressLint("MissingPermission")
@@ -194,7 +189,28 @@ public class MainActivity extends AppCompatActivity {
         scanTimeoutHandler.removeCallbacksAndMessages(null);
 
         clearScanResults();
+        populateChannels();
+        channelAdapter.notifyDataSetChanged();
+        setScanningState(false);
 
+        String hora  = new SimpleDateFormat("HH:mm:ss", Locale.getDefault()).format(new Date());
+        int    total = countNetworks();
+        String estado = "Escaneo: " + hora + "  ·  "
+                + (total > 0 ? total + " redes" : "sin redes detectadas")
+                + (!fresh ? " · caché" : "");
+
+        showStatus(estado);
+    }
+
+    @SuppressLint("MissingPermission")
+    private void loadCachedResults() {
+        clearScanResults();
+        populateChannels();
+        channelAdapter.notifyDataSetChanged();
+    }
+
+    @SuppressLint("MissingPermission")
+    private void populateChannels() {
         List<ScanResult> results;
         try {
             results = wifiManager.getScanResults();
@@ -205,9 +221,7 @@ public class MainActivity extends AppCompatActivity {
 
         for (ScanResult result : results) {
             int freq = result.frequency;
-
-            // Filtro de frecuencia: rango 2.4 GHz
-            if (freq < 2400 || freq > 2500) continue;
+            if (freq < FREQ_MIN || freq > FREQ_MAX) continue;
 
             Integer canal = frecuenciaACanal(freq);
             if (canal == null) continue;
@@ -218,46 +232,37 @@ public class MainActivity extends AppCompatActivity {
             }
             if (channelEntry == null) continue;
 
-            int pct;
-            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.R) {
-                int max = wifiManager.getMaxSignalLevel();
-                pct = WifiManager.calculateSignalLevel(result.level, max + 1) * 100 / max;
-                pct = Math.max(0, Math.min(pct, 100));
-            } else {
-                pct = WifiManager.calculateSignalLevel(result.level, 100);
-            }
-
-            String ssid = (result.SSID == null || result.SSID.isEmpty())
-                    ? "<oculto>"
-                    : result.SSID;
-
+            String ssid = (result.SSID == null || result.SSID.isEmpty()) ? "<oculto>" : result.SSID;
             channelEntry.getNetworks().add(
-                    new ScannedNetwork(ssid, result.BSSID, result.level, pct)
-            );
+                    new ScannedNetwork(ssid, result.BSSID, result.level, calcSignalPercent(result.level)));
         }
 
         for (WifiChannel ch : channels) {
-            Collections.sort(ch.getNetworks(),
-                    (a, b) -> Integer.compare(b.getRssi(), a.getRssi()));
+            Collections.sort(ch.getNetworks(), (a, b) -> Integer.compare(b.getRssi(), a.getRssi()));
         }
+    }
 
-        channelAdapter.notifyDataSetChanged();
-        setScanningState(false);
-
-        String hora = new SimpleDateFormat("HH:mm:ss", Locale.getDefault()).format(new Date());
-        int total = 0;
-        for (WifiChannel ch : channels) total += ch.getNetworks().size();
-
-        String estado = total > 0
-                ? "Último escaneo: " + hora + "  ·  " + total + " redes encontradas"
-                : "Último escaneo: " + hora + "  ·  sin redes detectadas";
-
-        binding.tvScanStatus.setText(estado);
-        binding.tvScanStatus.setVisibility(View.VISIBLE);
+    private int calcSignalPercent(int rssi) {
+        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.R) {
+            int max = wifiManager.getMaxSignalLevel();
+            return Math.max(0, Math.min(WifiManager.calculateSignalLevel(rssi, max + 1) * 100 / max, 100));
+        }
+        return WifiManager.calculateSignalLevel(rssi, 100);
     }
 
     private void clearScanResults() {
         for (WifiChannel ch : channels) ch.getNetworks().clear();
+    }
+
+    private int countNetworks() {
+        int total = 0;
+        for (WifiChannel ch : channels) total += ch.getNetworks().size();
+        return total;
+    }
+
+    private void showStatus(String msg) {
+        binding.tvScanStatus.setText(msg);
+        binding.tvScanStatus.setVisibility(View.VISIBLE);
     }
 
     private void setScanningState(boolean scanning) {
@@ -273,31 +278,24 @@ public class MainActivity extends AppCompatActivity {
         }
     }
 
+    private boolean isAirplaneModeOn() {
+        return Settings.Global.getInt(getContentResolver(), Settings.Global.AIRPLANE_MODE_ON, 0) == 1;
+    }
+
     private Integer frecuenciaACanal(int freq) {
         if (freq == 2484) return 14;
         if (freq >= 2412 && freq <= 2472) return (freq - 2407) / 5;
         return null;
     }
 
-    /**
-     * Lista fija de los 14 canales del estándar 802.11 en 2.4 GHz.
-     * Los canales 1, 6 y 11 son los no solapados; se marcan como "prime".
-     * Esta tabla existe independientemente del radio WiFi, por eso la app
-     * sigue siendo útil incluso con modo avión activo.
-     */
+    // Canales 1,6,11 son los no solapados (prime). La tabla existe sin radio WiFi activo
     private List<WifiChannel> buildAllChannels() {
-
         class Def {
-            final int ch, freq;
-            final String region;
-            final boolean restricted;
-
+            final int ch, freq; final String region; final boolean restricted;
             Def(int ch, int freq, String region, boolean restricted) {
-                this.ch = ch; this.freq = freq;
-                this.region = region; this.restricted = restricted;
+                this.ch = ch; this.freq = freq; this.region = region; this.restricted = restricted;
             }
         }
-
         List<Def> defs = new ArrayList<>(Arrays.asList(
                 new Def(1,  2412, "Universal",              false),
                 new Def(2,  2417, "Universal",              false),
@@ -314,24 +312,18 @@ public class MainActivity extends AppCompatActivity {
                 new Def(13, 2472, "Restringido (no US/CA)", true),
                 new Def(14, 2484, "Solo Japón — 802.11b",   true)
         ));
-
-        // HashSet compatible con minSdk 23; Set.of() requeriría API 26
-        Set<Integer> primeChannels = new HashSet<>(Arrays.asList(1, 6, 11));
-
+        Set<Integer> prime = new HashSet<>(Arrays.asList(1, 6, 11));
         List<WifiChannel> list = new ArrayList<>();
         for (Def d : defs) {
-            list.add(new WifiChannel(
-                    d.ch, d.freq, d.region, d.restricted, primeChannels.contains(d.ch)
-            ));
+            list.add(new WifiChannel(d.ch, d.freq, d.region, d.restricted, prime.contains(d.ch)));
         }
         return list;
     }
 
-    /** Diálogo de información: universidad, materia, docente e integrantes del grupo. */
     private void showAboutDialog() {
-        DialogAboutBinding dialogBinding = DialogAboutBinding.inflate(LayoutInflater.from(this));
+        DialogAboutBinding db = DialogAboutBinding.inflate(LayoutInflater.from(this));
         new AlertDialog.Builder(this)
-                .setView(dialogBinding.getRoot())
+                .setView(db.getRoot())
                 .setPositiveButton(getString(R.string.about_close), null)
                 .show();
     }
@@ -339,24 +331,23 @@ public class MainActivity extends AppCompatActivity {
     private void showEnableWifiDialog() {
         new AlertDialog.Builder(this)
                 .setTitle("WiFi desactivado")
-                .setMessage(
-                        "Para detectar redes en los canales se necesita WiFi activo, o bien " +
-                                "activar \"Escaneo WiFi\" en Ajustes → Ubicación → Avanzado.\n\n" +
-                                "La tabla de canales sigue disponible sin conexión."
-                )
-                .setPositiveButton("Ajustes WiFi", (d, w) ->
-                        startActivity(new Intent(Settings.ACTION_WIFI_SETTINGS)))
-                .setNeutralButton("Ver tabla", (d, w) -> d.dismiss())
+                .setMessage("Para detectar redes necesitas WiFi activo, o activar " +
+                        "\"Escaneo WiFi\" en Ajustes → Ubicación → Avanzado.")
+                .setPositiveButton("Ajustes WiFi", (d, w) -> startActivity(new Intent(Settings.ACTION_WIFI_SETTINGS)))
+                .setNegativeButton("Ubicación", (d, w) -> startActivity(new Intent(Settings.ACTION_LOCATION_SOURCE_SETTINGS)))
+                .setNeutralButton("Cerrar", null)
+                .setOnDismissListener(d -> {
+                    boolean puedeEscanear = wifiManager.isWifiEnabled() || wifiManager.isScanAlwaysAvailable();
+                    if (!puedeEscanear) showStatus("Activa WiFi o escaneo de ubicación para continuar");
+                })
                 .show();
     }
 
     private void showPermissionDeniedDialog() {
         new AlertDialog.Builder(this)
                 .setTitle("Permisos requeridos")
-                .setMessage(
-                        "Sin permisos de ubicación el sistema no expone los resultados del escaneo WiFi. " +
-                                "La tabla de todos los canales sigue disponible."
-                )
+                .setMessage("Sin permisos de ubicación el sistema no expone los resultados " +
+                        "del escaneo WiFi. La tabla de canales sigue disponible.")
                 .setPositiveButton("Reintentar", (d, w) -> requestPermissionsAndScan())
                 .setNegativeButton("Continuar sin escaneo", null)
                 .show();
@@ -367,5 +358,6 @@ public class MainActivity extends AppCompatActivity {
         super.onDestroy();
         safeUnregisterReceiver();
         scanTimeoutHandler.removeCallbacksAndMessages(null);
+        countdownHandler.removeCallbacksAndMessages(null);
     }
 }
